test_case/rust-lang_rust/52644_408077471.rs
rust
> #![feature(i128_type)] //~ ERROR the feature `i128_type` has been stable since 1.26.0
> 